# cgr_localization

./: .gitignore  CMakeLists.txt  Doxyfile  InstallPackages  Makefile  README.md  manifest.xml
config/: kinect_parameters.cfg  localization_parameters.cfg
etc/custom_maps/: cvap_tr14_floor6-rlm.txt  cvap_tr14_floor7-rlm.txt  plottingLines.py
launch/: cgr_demo_kinect.launch  cgr_demo_laser.launch  cgr_demo_localization_gui.launch  cgr_demo_localization_gui_gdb.launch  cgr_demo_only_kinect.launch
maps/CVAP6/: CVAP6_vector.txt
maps/CVAP7/: CVAP7_vector.txt
msg/: DisplayMsg.msg
msg_gen/cpp/include/cgr_localization/: DisplayMsg.h  LocalizationMsg.h
msg_gen/lisp/: DisplayMsg.lisp  LocalizationMsg.lisp  _package.lisp  _package_DisplayMsg.lisp  _package_LocalizationMsg.lisp  cgr_localization-msg.asd
rviz_cfg/: cgr_demo.vcg
scripts/: cgr_benchmark.py  localization_error.py  localization_listener.py
scripts/posefiles/: complete.p  sparse.p
src/: mainpage.h
src/cgr/: localization_main.cpp  pre_render.cpp  vectorparticlefilter.cpp  vectorparticlefilter.h
src/cgr_localization/msg/: _DisplayMsg.py  _LocalizationMsg.py  __init__.py
src/cgr_localization/srv/: _LocalizationInterfaceSrv.py  __init__.py
src/fspf/: fspf_main.cpp
src/gui/: vector_display.cpp  vector_display_main.cpp  vector_display_main.cpp.orig
src/map/: vector_map.cpp  vector_map.cpp.orig  vector_map.h
src/shared/math/: geometry.h  gvector.h  line.h
srv/: LocalizationInterfaceSrv.srv
srv_gen/cpp/include/cgr_localization/: LocalizationInterfaceSrv.h
srv_gen/lisp/: LocalizationInterfaceSrv.lisp  _package.lisp  _package_LocalizationInterfaceSrv.lisp  cgr_localization-srv.asd
